some modification on the fix